description wrap fix

--- a/frontend/src/css/series-details.css
+++ b/frontend/src/css/series-details.css
@@ -55,3 +55,7 @@
     border-radius: 50%;
     color: #ffffff;
 }
+.description p {
+    margin-top: '10px';
+    text-overflow: ellipsis;
+}
